partial implementation for west.py

--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -37,10 +37,10 @@
 
     <div class="hidebg" id="salary_month" style="top: 214px;right: 2063px;width: 317px;height: 47px;font-size: 42px;font-family: timesnewroman">09/2021</div>
     <div class="hidebg" id="printed_at" style="top: 261px;right: 2018px;width: 353px;height: 47px;font-size: 42px;font-family: timesnewroman">10/10/2021</div>
-    <div id="employee_name" class="hidebg" style="top: 639px;right: 190px;width: 850px;height: 47px;font-size: 40px;font-family: timesnewroman">פלוני אלמוני</div>
+    <div id="employee_name" class="hidebg" style="top: 639px;right: 170px;width: 850px;height: 47px;font-size: 40px;font-family: timesnewroman">פלוני אלמוני</div>
     <div id="employee_address" class="hidebg" style="top: 690px;right: 170px;width: 870px;height: 97px;font-size: 39px;font-family: timesnewroman">ארלוזורוב 60
-    <br>
-    ירושלים 1234567</div>
+    <br></div>
+    <div id="employee_address_city" class="hidebg" style="top: 741px;right: 170px;width: 870px;height: 60px;font-size: 39px;font-family: timesnewroman"> ירושלים 1234567</div>
 
     <div id="id_number" class="hidebg" style="top: 489px;right: 1449px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">123456789</div>
     <div id="employee_number" class="hidebg" style="top: 489px;right: 2291px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">1234</div>
@@ -107,25 +107,7 @@
                 <td><div>237.0</div></td>
                 <td><div>12345.00</div></td>
             </tr>
-            <tr>
-                <td><div>001</div></td>
-                <td><div>משכורת</div></td>
-                <td><div>0.80</div></td>
-                <td><div>2730.00</div></td>
-                <td><div>-19234.56</div></td>
-                <td><div>237.0</div></td>
-                <td><div>12345.00</div></td>
-            </tr>
-            <tr>
-                <td><div>001</div></td>
-                <td><div>משכורת</div></td>
-                <td><div>0.80</div></td>
-                <td><div>2730.00</div></td>
-                <td><div>-19234.56</div></td>
-                <td><div>237.0</div></td>
-                <td><div>12345.00</div></td>
-            </tr>
-            {% for i in range(10) %}
+            {% for i in range(9) %}
             <tr>
                 <td><div>001</div></td>
                 <td><div>משכורת</div></td>
@@ -202,7 +184,7 @@
             <tbody>
             {% for i in range(5) %}
             <tr>
-                <td>001</td>
+                <td><div>001</div></td>
                 <td><div>קו הבריאות</div></td>
                 <td><div>-4565.52</div></td>
             </tr>
