add last table to html

--- a/faker_israel/salaries/moon.jinja.html
+++ b/faker_israel/salaries/moon.jinja.html
@@ -356,5 +356,18 @@
             <span id="hafrasha_bl" style="padding-right: 19px;">1079.00</span>
         </p>
     </div>
+    <div style="top: 3434px; right: 85px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>3639.57</p></div>
+    <div style="top: 3434px; right: 277px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>1493.86</p></div>
+    <div style="top: 3434px; right: 465px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
+    <div style="top: 3434px; right: 655px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
+    <div style="top: 3434px; right: 845px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
+    <div style="top: 3434px; right: 1035px; width: 152px; height: 50px; background-color: #C6E6F3;"><p>5133.43</p></div>
+    <div style="top: 3434px; right: 1225px; width: 151px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
+    <div style="top: 3434px; right: 1415px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>5133.43</p></div>
+    <div style="top: 3434px; right: 1605px; width: 152px; height: 50px; background-color: #C6E6F3;"><p>1591.00</p></div>
+    <div style="top: 3434px; right: 1795px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>3542.43</p></div>
+    <div style="top: 3434px; right: 1985px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
+    <div style="top: 3434px; right: 2175px; width: 180px; height: 50px; background-color: #C6E6F3;"><p>508.21</p></div>
+    <div style="top: 3434px; right: 2365px; width: 194px; height: 50px; background-color: white;"><p>3054.22</p></div>
 </div>
 {% endblock %}
