--- a/faker_israel/salaries/moon.jinja.html
+++ b/faker_israel/salaries/moon.jinja.html
@@ -40,13 +40,10 @@
         <div style="width: 1395px;height: 134px;right: 935px;top: 1388px;background-image: url('moon_nikuy_mutavim_gradient.png');"></div>
     </div>
     <div style="top: 162px; right: 80px; width: 828px; height: 200px;">
-        <p style="margin-top: 15px;">
-            <span id="full_name" style="padding-left: 288px;">ד"ר גבי גזית</span>
-            מספר זהות:
-            <span id="personal_id">123456789</span>
-            <br>
-            <span style="padding-right: 597px;">משרה נוספת: 1</span>
-        </p>
+        <div id="full_name" style="top: 20px; right: 10px;"><p>ד"ר גבי גזית</p></div>
+        <div style="top: 20px; right: 438px;"><p>מספר זהות:</p></div>
+        <div id="personal_id" style="top: 20px; right: 632px;"><p>123456789</p></div>
+        <div style="top: 59px; right: 419px;"><p>משרה נוספת: 1</p></div>
     </div>
     <div style="top: 177px; right: 1113px; width: 300px; height: 50px; background-color: #D7EDF8;"><p id="month_year">אוגוסט 2020</p></div>
     <div style="top: 173px; right: 2274px; width: 135px; height: 50px; background-color: #D7EDF8;"><p>בדיקה</p></div>
@@ -358,18 +355,18 @@
             <span id="hafrasha_bl" style="padding-right: 19px;">1079.00</span>
         </p>
     </div>
-    <div style="top: 3434px; right: 85px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>3639.57</p></div>
-    <div style="top: 3434px; right: 277px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>1493.86</p></div>
-    <div style="top: 3434px; right: 465px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
-    <div style="top: 3434px; right: 655px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
-    <div style="top: 3434px; right: 845px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
-    <div style="top: 3434px; right: 1035px; width: 152px; height: 50px; background-color: #C6E6F3;"><p>5133.43</p></div>
-    <div style="top: 3434px; right: 1225px; width: 151px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
-    <div style="top: 3434px; right: 1415px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>5133.43</p></div>
-    <div style="top: 3434px; right: 1605px; width: 152px; height: 50px; background-color: #C6E6F3;"><p>1591.00</p></div>
-    <div style="top: 3434px; right: 1795px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>3542.43</p></div>
-    <div style="top: 3434px; right: 1985px; width: 156px; height: 50px; background-color: #C6E6F3;"><p>10</p></div>
-    <div style="top: 3434px; right: 2175px; width: 180px; height: 50px; background-color: #C6E6F3;"><p>508.21</p></div>
-    <div style="top: 3434px; right: 2365px; width: 194px; height: 50px; background-color: white;"><p>3054.22</p></div>
+    <div style="top: 3434px; right: 85px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="yesod_meshulav">3639.57</p></div>
+    <div style="top: 3434px; right: 277px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="tosefet">1493.86</p></div>
+    <div style="top: 3434px; right: 465px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="extra_work">10</p></div>
+    <div style="top: 3434px; right: 655px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="reimbursment">10</p></div>
+    <div style="top: 3434px; right: 845px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="other_tashlumim">10</p></div>
+    <div style="top: 3434px; right: 1035px; width: 152px; height: 50px; background-color: #C6E6F3;"><p id="bruto_shotef_down">5133.43</p></div>
+    <div style="top: 3434px; right: 1225px; width: 151px; height: 50px; background-color: #C6E6F3;"><p id="hefreshim">10</p></div>
+    <div style="top: 3434px; right: 1409px; width: 162px; height: 50px; background-color: #C6E6F3;"><p id="total_tashlumim_down">5133.43</p></div>
+    <div style="top: 3434px; right: 1601px; width: 158px; height: 50px; background-color: #C6E6F3;"><p id="nikuyey_hova">1591.00</p></div>
+    <div style="top: 3434px; right: 1790px; width: 164px; height: 50px; background-color: #C6E6F3;"><p id="sachar_neto">3542.43</p></div>
+    <div style="top: 3434px; right: 1985px; width: 156px; height: 50px; background-color: #C6E6F3;"><p id="nekuyey_reshut">10</p></div>
+    <div style="top: 3434px; right: 2175px; width: 180px; height: 50px; background-color: #C6E6F3;"><p id="nikuy_mos">508.21</p></div>
+    <div style="top: 3434px; right: 2365px; width: 194px; height: 50px; background-color: white;"><p id="schum_babank">3054.22</p></div>
 </div>
 {% endblock %}
