fixed comments (I think)

--- a/faker_israel/salaries/moon.jinja.html
+++ b/faker_israel/salaries/moon.jinja.html
@@ -300,9 +300,9 @@
     <div style="top:2929px; right: 80px; width: 815px;">
         <p>
             תיק ניכויים מס הכנסה:
-            <span id="tik_nikuyim">910007566</span>
+            <span id="tik_nikuyim" style="width: 233px; height: 47px; display: inline-block;">910007566</span>
             ב.ל
-            <span id="bituah_leumi">910007566</span>
+            <span id="bituah_leumi" style="width: 233px; height: 47px; display: inline-block;">910007566</span>
         </p>
     </div>
     <div style="top: 2971px; right: 80px; width: 815px;">
@@ -314,7 +314,7 @@
     <div style="top: 3013px; right: 80px; width: 815px;">
         <p>
             ברוטו למס
-            <span id="bruto_mas" style="padding-right: 34px; padding-left: 117px;">30417.84</span>
+            <span id="bruto_mas" style="width: 150px; height: 47px; display: inline-block">30417.84</span>
             ניכוי ב.ב
             <span id="nikuy_bb">1522.00</span>
         </p>
