fixed comments (I think)

--- a/faker_israel/salaries/moon.jinja.html
+++ b/faker_israel/salaries/moon.jinja.html
@@ -46,7 +46,7 @@
         <div style="top: 59px; right: 419px;"><p>משרה נוספת: 1</p></div>
     </div>
     <div style="top: 177px; right: 1113px; width: 300px; height: 50px; background-color: #D7EDF8;"><p id="month_year">אוגוסט 2020</p></div>
-    <div style="top: 173px; right: 2274px; width: 135px; height: 50px; background-color: #D7EDF8;"><p>בדיקה</p></div>
+    <div style="top: 173px; right: 2274px; width: 135px; height: 50px; background-color: #D7EDF8;"><p id="tlush">בדיקה</p></div>
     <div style="top: 294px;right: 80px;width: 828px;height: 420px;"><p>
         משרד :
         <span id="personal_details_office">025</span>
