minor fixes for west

--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -428,5 +428,8 @@
 
     <div id="tashlum" class="hidebg" style="font-family: timesnewroman; width: 215px; top: 3010px; right: 2178px;">15249.00</div>
 
+    <div id="salary_generator_copyright" style="width: 920px;height: 250px;top: 2286px;right: -795px;transform: rotate(270deg);transform-origin: left top;display: inline-block;font-size: 30px;background: white;">
+        כל הזכויות שמורות לתלושי משכורת מערב (1973) בע"מ. מ.לקוח: 928312
+    </div>
 </div>
 {% endblock %}
