minor updates + add east new pages

--- a/faker_israel/salaries/east-page-1.jinja.html
+++ b/faker_israel/salaries/east-page-1.jinja.html
@@ -114,7 +114,7 @@
 
 {% endblock %}
 {% block body %}
-<div class="david" style="background-image: url('east.png'); width: 2480px; height: 3507px;">
+<div class="david" style="background-image: url('east-page-1-empty.png'); width: 2480px; height: 3507px;">
     <div id="place" style="background-color: white;width: 574px;height: 57px;">אוניברסיטת אריאל בשומרון</div>
     <div id="address" style="background-color: white;width: 1009px;height: 57px;">קריית המדע אריאל ת.ד. 3 40700</div>
     <div id="tik_nikuyim" style="background-color: white;width: 233px;height: 53px;">934578903</div>
